# CustomerSupport-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CAREER_GUIDE.md  Dockerfile  MEMORY_ARCHITECTURE.md  PROJECT_OVERVIEW.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.sh
data/demo_seed/: accounts.json  invoices.json  subscriptions.json  tickets.json
data/evals/: help_center_eval_cases.csv
data/knowledge_base/: account_access_admin_guide.md  billing_exception_playbook.md  customer_support_handbook.md
docs/: HELP_CENTER_VALIDATION.md  LANGSMITH_EVALUATION.md  LANGSMITH_TRACING.md
examples/: README.md
projects/agents/CustomerSupport-Agent/: .env.example  .gitignore  Dockerfile  MEMORY_ARCHITECTURE.md  PROJECT_OVERVIEW.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
projects/agents/CustomerSupport-Agent/examples/: README.md
projects/agents/CustomerSupport-Agent/shared/: __init__.py  (+1 more)
scripts/: init_demo_db.py  run_langsmith_eval.py
shared/: rate_limit.py  security.py
src/: config.py
src/api/: main.py
src/conversation/: support_agent.py
src/conversation/support_agent/: graph.py  persistence.py  service.py
src/db/: __init__.py  demo_seed.py  models.py  repositories.py  session.py
src/knowledge/: document_store.py  faq_store.py
src/memory/: __init__.py  semantic_store.py
src/tools/: support_tools.py
tests/: test_support_agent.py
tests/unit/: test_api.py  test_business_flows.py  test_document_store.py  test_faq_store.py  test_support_agent.py  test_support_tools.py
(+21 files in other folders)
